// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RepositoryCard.vue RepositoryCard.vue renders correctly when have entities array props 1`] = `
<bhcard-stub>
  <div class="bh-card__left__content__flex-display"><strong> Caminhão</strong>
    <div class="bh-card__left__content__flex-display__label">
      <p><strong>0</strong> Sentences </p>
      <p><strong>0</strong> Entities</p>
    </div>
  </div>
  <p>Entities</p>
</bhcard-stub>
`;

exports[`RepositoryCard.vue renders correctly 1`] = `
<bhcard-stub>
  <div class="bh-card__left__content__flex-display"><strong> Caminhão</strong>
    <div class="bh-card__left__content__flex-display__label">
      <p><strong>0</strong> Sentences </p>
      <!---->
    </div>
  </div>
  <!---->
</bhcard-stub>
`;
